--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,8 +1,53 @@
-
-#contextAreaContextMenu{ margin: 5px 0 0 5px }
-
-.tab-line[selected="true"] {
-  background-color: red !important;
-  opacity: 100 !important;
+.tabbrowser-tab[fadein]:not([pinned]) {
+    max-width: 140px !important;
 }
 
+.tabbrowser-tab[fadein]:not([pinned]):not([selected="true"]) {
+    max-width: 100px !important;
+}
+
+
+#navigator-toolbox[movingtab],
+#tabbrowser-tabs[movingtab]
+{
+    margin: 0 !important;
+}
+
+.tab-line {
+    display: none !important;
+}
+
+/* Remove 2px gap left by tab-line if hidden */
+.tabbrowser-tab {
+    margin-top: -2px !important;
+}
+
+/* Round URL bar */
+#urlbar, .searchbar-textbox{
+  border-radius: 0.5em !important;
+}
+
+/* Buttons */
+/* remove rhs hamburger menu*/
+#PanelUI-button {
+  display:none!important;
+}
+/* remove arrow in urlbar */
+.urlbar-go-button {
+	display:none!important;
+}
+
+/* replace magnifying glass with logo */
+#urlbar[pageproxystate="invalid"] > #identity-box > #identity-icon {
+  display: block !important;
+  color: transparent !important;
+  background-image: url("duckduckgo.png") !important;
+  background-repeat: repeat !important;
+  background-position: center !important;
+  background-size: cover !important;
+}
+
+/* color */
+#urlbar {
+   background-color: transparent !important; 
+}
